--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,33 @@
-#TMUX CONFIG 
+#TMUX CONFIG
+unbind r
+bind r source-file ~/.tmux.conf
 
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
+set -g prefix C-s
+
+set -g mouse on
+
+set-window-option -g mode-keys vi
+
+#bind-key h select-pane -L
+#bind-key j select-pane -D
+#bind-key k select-pane -U
+#bind-key l select-pane -R
+
+#Tmux & Neovim Navagation
+bind -n C-h if-shell '[ "$(tmux display -p "#{pane_current_command}")" = "nvim" ]' \
+      'send-keys C-h' 'select-pane -L'
+bind -n C-j if-shell '[ "$(tmux display -p "#{pane_current_command}")" = "nvim" ]' \
+      'send-keys C-j' 'select-pane -D'
+bind -n C-k if-shell '[ "$(tmux display -p "#{pane_current_command}")" = "nvim" ]' \
+      'send-keys C-k' 'select-pane -U'
+bind -n C-l if-shell '[ "$(tmux display -p "#{pane_current_command}")" = "nvim" ]' \
+      'send-keys C-l' 'select-pane -R'
+
+
+#Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'tmux-plugins/tmux-battery'
@@ -70,3 +98,8 @@ set -gF window-status-separator "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│"
 
 set -g window-status-current-format " #I#{?#{!=:#{window_name},Window},: #W,} "
 set -g window-status-current-style "bg=#{@thm_peach},fg=#{@thm_bg},bold"
+
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
+run '~/.tmux/plugins/tpm/tpm'
